[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
    "druid/examples/value_formatting",
]
default-members = [
    "druid",
    "druid-shell",
    "druid-derive",
]

[patch.crates-io]
piet = { git = "https://github.com/avitex/piet", branch = "master" }
piet-cairo = { git = "https://github.com/avitex/piet", branch = "master" }
piet-common = { git = "https://github.com/avitex/piet", branch = "master" }
